--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-NEXT_PUBLIC_DOMAIN=https://snaptik1click.com
-NEXT_PUBLIC_CONTACT_MAIL=snaptik1click@skiff.com
+NEXT_PUBLIC_DOMAIN=https://mytiktaki.web.app/
+NEXT_PUBLIC_CONTACT_MAIL=syedaoonhussain@gmail.com
 NEXT_PUBLIC_DOWNLOAD_URL=https://www.tikwm.com/video/media/hdplay/
+NEXT_PUBLIC_DOWNLOAD_URL_play=https://www.tikwm.com/video/media/hdplay/
+NEXT_PUBLIC_DOWNLOAD_URL_wmplay=https://www.tikwm.com/video/media/hdplay/
 NEXT_PUBLIC_DOWNLOAD_MP3_URL=https://www.tikwm.com/video/music/
 NEXT_PUBLIC_TRENDING=https://www.tiktok.com/node/share/discover
