--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "snaptik2",
-  "version": "0.1.0",
+  "name": "mytiktaki",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -19,8 +19,10 @@
     "cors": "^2.8.5",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.4",
+    "firebase-admin": "^11.10.1",
+    "firebase-functions": "^4.4.1",
     "framer-motion": "^10.2.3",
-    "next": "13.2.4",
+    "next": "^13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
@@ -28,6 +30,11 @@
     "zustand": "^4.3.6"
   },
   "devDependencies": {
-    "@svgr/webpack": "^6.5.1"
+    "@babel/cli": "^7.22.10",
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "@svgr/webpack": "^6.5.1",
+    "cross-env": "^7.0.3",
+    "rimraf": "^5.0.1"
   }
 }
